<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/text_vertical_margin"
        android:hint="@string/prompt_email"
        android:textColorHint="@color/colorPrimaryTextWhite"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLength="15"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryTextWhite" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimaryTextWhite"
        android:hint="@string/prompt_password"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryTextWhite"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:textColor="@color/colorPrimary"
        android:text="@string/btn_login" />

    <TextView
        android:id="@+id/tvToRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="16dp"
        android:text="@string/text_register"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryTextWhite" />

</LinearLayout>
