<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_profile"
        android:layout_margin="8dp"
        android:scaleType="centerCrop"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimaryTextWhite"
        android:hint="@string/prompt_username"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textAutoComplete"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryTextWhite"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/prompt_email"
        android:textColorHint="@color/colorPrimaryTextWhite"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etRegEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLength="15"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryTextWhite" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimaryTextWhite"
        android:hint="@string/prompt_password"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etRegPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryTextWhite"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_re_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimaryTextWhite"
        android:hint="@string/prompt_re_password"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etReRegPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryTextWhite"/>

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:textColor="@color/colorPrimary"
        android:text="@string/btn_register" />

    <TextView
        android:id="@+id/tvToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="16dp"
        android:text="@string/text_login"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryTextWhite" />

</LinearLayout>
